xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__postfix_filter_nested.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"(1, 2)[. gt 2][. lt 3]\")"
---
Let(
    Let {
        name: Name(
            "v2",
        ),
        var_expr: Binary(
            Binary {
                left: Const(
                    Integer(
                        1,
                    ),
                ),
                op: Comma,
                right: Const(
                    Integer(
                        2,
                    ),
                ),
            },
        ),
        return_expr: Let(
            Let {
                name: Name(
                    "v8",
                ),
                var_expr: Filter(
                    Filter {
                        context_names: ContextNames {
                            item: Name(
                                "v3",
                            ),
                            position: Name(
                                "v4",
                            ),
                            last: Name(
                                "v5",
                            ),
                        },
                        var_atom: Variable(
                            Name(
                                "v2",
                            ),
                        ),
                        return_expr: Binary(
                            Binary {
                                left: Variable(
                                    Name(
                                        "v3",
                                    ),
                                ),
                                op: Gt,
                                right: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
                return_expr: Filter(
                    Filter {
                        context_names: ContextNames {
                            item: Name(
                                "v9",
                            ),
                            position: Name(
                                "v10",
                            ),
                            last: Name(
                                "v11",
                            ),
                        },
                        var_atom: Variable(
                            Name(
                                "v8",
                            ),
                        ),
                        return_expr: Binary(
                            Binary {
                                left: Variable(
                                    Name(
                                        "v9",
                                    ),
                                ),
                                op: Lt,
                                right: Const(
                                    Integer(
                                        3,
                                    ),
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    },
)
