xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__postfix_index.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"(1, 2)[1]\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        1,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                            op: Comma,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        4,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            1,
                        ),
                        length: SourceOffset(
                            4,
                        ),
                    },
                },
                return_expr: Spanned {
                    value: Filter(
                        Filter {
                            context_names: ContextNames {
                                item: Name(
                                    "v3",
                                ),
                                position: Name(
                                    "v4",
                                ),
                                last: Name(
                                    "v5",
                                ),
                            },
                            var_atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v2",
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        1,
                                    ),
                                    length: SourceOffset(
                                        4,
                                    ),
                                },
                            },
                            return_expr: Spanned {
                                value: Atom(
                                    Spanned {
                                        value: Const(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                7,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        7,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            7,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                7,
            ),
            length: SourceOffset(
                1,
            ),
        },
    },
)
