xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__static_function_call2.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"my_function(1 + 2, 3 + 4)\")"
---
Ok(
    Let(
        Let {
            name: Name(
                "v0",
            ),
            var_expr: StaticFunctionReference(
                StaticFunctionId(
                    0,
                ),
                None,
            ),
            return_expr: Let(
                Let {
                    name: Name(
                        "v3",
                    ),
                    var_expr: Binary(
                        Binary {
                            left: (
                                Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                12..13,
                            ),
                            op: Add,
                            right: (
                                Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                16..17,
                            ),
                        },
                    ),
                    return_expr: Let(
                        Let {
                            name: Name(
                                "v6",
                            ),
                            var_expr: Binary(
                                Binary {
                                    left: (
                                        Const(
                                            Integer(
                                                3,
                                            ),
                                        ),
                                        19..20,
                                    ),
                                    op: Add,
                                    right: (
                                        Const(
                                            Integer(
                                                4,
                                            ),
                                        ),
                                        23..24,
                                    ),
                                },
                            ),
                            return_expr: FunctionCall(
                                FunctionCall {
                                    atom: (
                                        Variable(
                                            Name(
                                                "v0",
                                            ),
                                        ),
                                        0..0,
                                    ),
                                    args: [
                                        (
                                            Variable(
                                                Name(
                                                    "v3",
                                                ),
                                            ),
                                            12..17,
                                        ),
                                        (
                                            Variable(
                                                Name(
                                                    "v6",
                                                ),
                                            ),
                                            19..24,
                                        ),
                                    ],
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ),
)
