xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__unary_plus.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"+1\")"
---
Ok(
    Spanned {
        value: Unary(
            Unary {
                op: Plus,
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 1..2,
                },
            },
        ),
        span: 0..2,
    },
)
